workspace = { members = ["aji_core", "net/wasabi"] }

[package]
name = "aji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:noli"]

[[bin]]
name = "aji"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
aji_core = { path = "./aji_core" }
net_wasabi = { path = "./net/wasabi", optional = true }
noli = {git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true}
